@@ -5,6 +5,7 @@ UNRELEASED CHANGES:
 * Fix confirm email sent when signup_double_optin is false
 * Fix now() without timezone functions
 * Remove notion of events
+* Support papertrail logging
 
 RELEASED VERSIONS:
 
